--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "uuid": "^10.0.0",
