--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.6",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
